--- a/source/index.html
+++ b/source/index.html
@@ -146,7 +146,7 @@
               </li>
 
               <li class="content__box">
-                <svg class="content__svg" width="14" height="14">
+                <svg class="content__svg content__svg--rotate" width="14" height="14">
                   <use xlink:href="./img/sprite.svg#icon__arrow"></use>
                 </svg>
               </li>
@@ -199,7 +199,7 @@
               </li>
 
               <li class="content__box">
-                <svg class="content__svg" width="14" height="14">
+                <svg class="content__svg content__svg--rotate" width="14" height="14">
                   <use xlink:href="./img/sprite.svg#icon__arrow"></use>
                 </svg>
               </li>
@@ -248,7 +248,7 @@
               </li>
 
               <li class="content__box">
-                <svg class="content__svg" width="14" height="14">
+                <svg class="content__svg content__svg--rotate" width="14" height="14">
                   <use xlink:href="./img/sprite.svg#icon__arrow"></use>
                 </svg>
               </li>
